{{$NEXT}}

1.302014_005 2016-04-24 01:55:55-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC5
    - Prevent the breakage reporter from being a test failure

1.302014_004 2016-04-23 16:21:34-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC4
    - Update breakage info
    - Fix IPC files driver to use the most significant data in the shm (needs test)

1.302014_003 2016-04-23 03:20:36-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC3
    - Localize $@ and $! when loading Data::Dumper in explain()

1.302014_002 2016-04-22 14:54:51-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC2
    - Restore X-Breaks meta info
    - Keep dist.ini in the tarball

1.302014_001 2016-04-22 04:01:50-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC1
    - Merge Test2 into the Test-Simple dist
    - Remove experimental status
    - Update copyright dates
    - Better error messages when using Carp in Hashbase init()
    - Document 2 methods on Events
    - Fix Test2 #17 (typo fix in docs)
    - Report version mismatches between Test::Builder and Test2
    - Update transition docs
    - Breakage library and warnings

*****************************************************************************
*                                                                           *
* BELOW THIS POINT ARE THE SEPERATE CHANGELOGS FOR Test-Simple, Test2, AND  *
* Test-Stream.                                                              *
*                                                                           *
*****************************************************************************

Test-Simple 1.302013_019 2016-04-13 20:23:18-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Expand no_numbers support to custom formatters

Test-Simple 1.302013_018 2016-04-07 21:23:03-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Support Test2 using an alternative formatter

Test-Simple 1.302013_017 2016-04-05 11:13:50-07:00 America/Los_Angeles (TRIAL RELEASE)
