@@ -1,9 +1,14 @@
 {{$NEXT}}
 
+    - RC6
+    - Remove reduntant and problematic parts of 00-report.t
+    - No changes to actual code, just a test that provides diags
+
 1.302014_005 2016-04-24 01:55:55-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - RC5
     - Prevent the breakage reporter from being a test failure
+    - No changes to actual code, just a test that provides diags
 
 1.302014_004 2016-04-23 16:21:34-07:00 America/Los_Angeles (TRIAL RELEASE)
 
